# vcv-rack-plugin-mcp-server

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MCPBridge.cpp  Makefile  README.md  RackMcpServer.cpp  build_patch.py  claude_desktop_config.json  plugin.cpp  plugin.json  vcvrack-mcp-bridge.js
.cache/clangd/index/: RackMcpServer.cpp.1E6FE7316DA5B3F2.idx
.github/workflows/: build-plugin.yml
skills/: vcvrack.md  vcvrack_client.py
skills/examples/: 01_vco_to_audio.md  02_vco_vcf_vca.md  03_lfo_modulation.md
tests/: test_json_helpers  test_json_helpers.cpp  test_server.py
